css/style.css
@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro);

/*~~~~~~~~~~~~~~~~~~~~~~~~~
Üldine Cx
~~~~~~~~~~~~~~~~~~~~~~~~~*/

html,
body {
    background-image: url('https://i.imgur.com/HQ5QSeR.jpg');
    background-size: cover;
    color: #676767!important;
    font-family: 'Source Code Pro', sans-serif !important;
    height: 100%;
    width: 100%;
    text-align: center;
    margin: 0;
    overflow: hidden;
    position: fixed;
    cursor: default;
    -webkit-user-select: text;
    -webkit-touch-callout: text;
}

::selection {
    background: #C4C4C4;
}

::-moz-selection {
    background: #C4C4C4;
}

/*~~~~~~~~~~~~~~~~~~~~~~~~~
Laadur ;3
~~~~~~~~~~~~~~~~~~~~~~~~~*/

.laadi {
    width: 100%;
    height: 100%;
    background-color: #f7f7f7;
    position: absolute;
    z-index: 1000;
}


/*~~~~~~~~~~~~~~~~~~~~~~~~~
Info kaart :b
~~~~~~~~~~~~~~~~~~~~~~~~~*/

div.info {
    display: inline-block;
    vertical-align: middle;
    background-color: rgba(0, 0, 0, 0.8);
    border-bottom-right-radius: 3px;
    border-bottom-left-radius: 3px;
    width: 25%;
    padding: 16px;
}

.info img {
    height: 118px;
    width: 118px;
}

.info p {
    margin-top: 16px;
}

.info p.tv {
    margin-top: 0px;
}


/*~~~~~~~~~~~~~~~~~~~~~~~~~
Jalus ^-^
~~~~~~~~~~~~~~~~~~~~~~~~~*/

div.jalus {
    width: 100%;
    position: fixed;
    height: 63px;
    background-color: rgba(0, 0, 0, 0.8);
    bottom: 0;
    padding: 16px 16px;
    line-height: normal;
}

.jalus p.aut {
    margin-top: 5px;
    font-size: 15px;
    float: left !important;
}

.jalus p.aut span.ktekst:hover,
.jalus p.aut span.ktekst:focus {
    color: #DADADA;
}

.jalus img.sponsor {
    height: 10px;
}

.jalus a img.sponsor:hover,
.jalus a img.sponsor:focus {
    content: url('../img/rmgroup-color.png');
}

.jalus img.sp1 {
    vertical-align: baseline;
}

.jalus img.sp2 {
    display: none;
}

.jalus .sots {
    font-size: 22px;
    float: right !important;
    margin-top: 1px;
}

.jalus .sots a i {
    padding-right: 2px;
    color: #676767;
}

.jalus .sots a i:hover,
.jalus .sots a i:focus {
    color: #DADADA;
}


/*~~~~~~~~~~~~~~~~~~~~~~~~~
Reag. Korrapärasus x3
~~~~~~~~~~~~~~~~~~~~~~~~~*/

@media only screen and (max-width: 900px) {
    div.info {
        width: 30%;
    }
}

@media only screen and (max-width: 750px) {
    div.info {
        width: 35%;
    }
}

@media only screen and (max-width: 650px) {
    div.info {
        width: 100%;
    }
}

@media only screen and (max-width: 500px) {
    div.info {
        height: 100%;
    }
    .jalus {
        background-color: transparent!important;
        margin: 28px 0px;
    }
    .jalus .sots {
        text-align: center;
        width: 100%;
    }
    .jalus p.aut {
        text-align: center;
        margin-bottom: auto;
        width: 100%;
    }
    .jalus img.sp1 {
        display: none;
    }
    .jalus img.sp2 {
        display: initial;
        margin-top: 0px;
        margin-bottom: 6px;
        float: none;
    }
}

@media only screen and (max-height: 525px) {
    div.info {
        width: 100%;
        height: 100%;
    }
    .jalus {
        background-color: transparent!important;
        margin: 28px 0px;
    }
    .jalus .sots {
        text-align: center;
        width: 100%;
    }
    .jalus p.aut {
        text-align: center;
        margin-bottom: auto;
        width: 100%;
    }
    .jalus img.sp1 {
        display: none;
    }
    .jalus img.sp2 {
        display: initial;
        margin-top: 0px;
        margin-bottom: 6px;
        float: none;
    }
}

@media only screen and (max-width: 435px) and (max-height: 430px) {
    .jalus {
        display: none;
    }
}

@media only screen and (max-height: 350px) and (min-width: 0px) {
    .jalus {
        display: none;
    }
}

@media only screen and (max-height: 280px) and (min-width: 0px) {
    .info img {
        display: none;
    }
}

@media only screen and (max-height: 370px) and (max-width: 320px) {
    .info img {
        display: none;
    }
}

